| Summary: | ASTERISK-29800: strings: Fix misusage in comment examples | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2021-12-11 20:10:05.000-0600 | Date Closed: | 2021-12-13 14:19:12.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | General |
| Versions: | 18.9.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fixes typos in the comments explaining usage. It seems at some point the enum was updated, but the text referring to previous enum values was not. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-12-11 20:10:06.921-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-12-13 14:19:14.545-0600 Change 17647 merged by Friendly Automation: strings: Fix enum names in comment examples [https://gerrit.asterisk.org/c/asterisk/+/17647|https://gerrit.asterisk.org/c/asterisk/+/17647] By: Friendly Automation (friendly-automation) 2021-12-13 14:22:20.531-0600 Change 17673 merged by Friendly Automation: strings: Fix enum names in comment examples [https://gerrit.asterisk.org/c/asterisk/+/17673|https://gerrit.asterisk.org/c/asterisk/+/17673] By: Friendly Automation (friendly-automation) 2021-12-14 04:19:11.227-0600 Change 17674 merged by Joshua Colp: strings: Fix enum names in comment examples [https://gerrit.asterisk.org/c/asterisk/+/17674|https://gerrit.asterisk.org/c/asterisk/+/17674] By: Friendly Automation (friendly-automation) 2021-12-14 04:19:31.468-0600 Change 17675 merged by Joshua Colp: strings: Fix enum names in comment examples [https://gerrit.asterisk.org/c/asterisk/+/17675|https://gerrit.asterisk.org/c/asterisk/+/17675] | ||